health/service.yml
apiVersion: v1
kind: Service
metadata:
  name: health-api
spec:
  selector:
    app: health-api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: health-web
spec:
  selector:
    app: health-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
