health/virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: health
spec:
  hosts:
    - "health.lth.so"
  gateways:
    - istio-ingress/public-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: health-api.health.svc.cluster.local
            port:
              number: 8080
    - route:
        - destination:
            host: health-web.health.svc.cluster.local
            port:
              number: 80
      headers:
        response:
          set:
            Strict-Transport-Security: max-age=31536000; includeSubDomains
